# llama2-chatbot

./: .gitignore  Dockerfile  README.md  llama2_chatbot.py  model_mapper.py  pyproject.toml  requirements.txt  sidebar.py  state_init.py  utils.py
.github/workflows/: lint.yml  test_docker_build.yml
